Use bootstrap title for popover, fix issue with race condition when a mutate and a close happen too closely

--- a/packages/shrub-skin-strapped/app/less/notifications.less
+++ b/packages/shrub-skin-strapped/app/less/notifications.less
@@ -4,11 +4,6 @@
   
   .popover-content {
     padding: 0 0 9px 0;
-    
-    .title {
-      border-bottom: 1px solid #ddd;
-      padding: 5px 14px;
-    }
   }
   
   p {
@@ -52,13 +47,6 @@
     border: 1px solid #999;
   }
   
-  .remove {
-    display: none;
-    position: absolute;
-    right: 9px;
-    top: 35px;  
-  }
-  
   .marked-as-read {
     background-color: #f2f2f2;
     color: #bbb;
@@ -66,6 +54,13 @@
 
   .marked-as-read:hover {
     color: #bbb;
+  }
+  
+  .remove {
+    display: none;
+    position: absolute;
+    right: 9px;
+    top: 35px;  
   }
   
   li {
